# pnpmat

./: .gitignore  CMakeLists.txt
src/include/: auz.h  bmat.h  bmat_clproc.h  bmat_proc.h  clutil.h  erode_kernel.cl  imat.h  pnpmat.h  pnpmat_proc.h  time.h  util.h
src/lib/: CMakeLists.txt  bmat.c  bmat_clproc.c  bmat_proc.c  clutil.c  erode_kernel.cl  gh_kernel.cl  imat.c  pnpmat.c  pnpmat_proc.c  time.c  util.c
src/script/: density.py  mktabs.py  split.py  test_erode.py  test_gh.py
src/test/: CMakeLists.txt  clerode.c  clgh.c  erode.c  gh.c  moore.c  pededilate.c  pedegh.c  pedemoore.c  pederl.c  pederode.c  rl.c
