set(std_src erode.c rl.c moore.c gh.c)
foreach(src ${std_src})
  get_filename_component(bin ${src} NAME_WE)
  add_executable(${bin} ${src})
  target_link_libraries(${bin} auz)
endforeach()

if(OpenCL_FOUND)
  set(cl_src clerode.c clgh.c)
  foreach(src ${cl_src})
    get_filename_component(bin ${src} NAME_WE)
    add_executable(${bin} ${src})
    target_link_libraries(${bin} auz ${OpenCL_LIBRARY})
  endforeach()
endif()

set(pede_src pederode.c pederl.c pedemoore.c pedegh.c)
foreach(src ${pede_src})
  get_filename_component(bin ${src} NAME_WE)
  add_executable(${bin} ${src})
  target_link_libraries(${bin} auz)
endforeach()

#configure_file(ltab.dat ${CMAKE_BINARY_DIR} COPYONLY)
#configure_file(rtab.dat ${CMAKE_BINARY_DIR} COPYONLY)
#configure_file(ltab.dat ${CMAKE_BINARY_DIR} COPYONLY)
#configure_file(rtab.dat ${CMAKE_BINARY_DIR} COPYONLY)
